--- a/comics/comics.html
+++ b/comics/comics.html
@@ -55,6 +55,11 @@ table[data-daysbefore="0"] .after {
     <li>gocomics.com</li>
     <li>comicskingdom.com</li>
     <li>johnhartstudios.com</li></ul>
+    <br/>
+    Also allow for <b>mixed display content:</b>
+    <br/>1. Click the lock icon to the left of this page's URL
+    <br/>2. Click "Site Settings"
+    <br/>3. Set "Insecure Content" to "Allow"
 </div>
 <div id="bottom">
 </div>
